# qwen-kernel

./: .gitignore  CMakeLists.txt  CROSSBOX-BRIEF.md  LICENSE  NOTICE  PORT-80B-BRIEF.md  PORT.md  README.md
bench/: README.md  active_bytes.py  metal_barrier_cost.swift  metal_membw.swift  qbench.py  results-2026-07-18-refresh.jsonl  results-gemma4-llamacpp.jsonl  results-gemma4-qk.jsonl  results-llamacpp.jsonl  results-prefill-opt.jsonl  results-qk-server.jsonl  results-qwen-prefill-coopmat.jsonl  results-qwen-prefill-fable.jsonl
build-stage6/: CMakeCache.txt  Makefile  cmake_install.cmake  qk
deploy/: 90-amdgpu-no-runtime-pm.rules  Dockerfile  README.md  build-image.sh  gpu-orphan-reaper.service  gpu-orphan-reaper.sh  gpu-orphan-reaper.timer  midnight-qk-worker.plist  midnight-standalone-80b.md  qk-35b-service.yaml  qk-server-split-80b.yaml  qk-server-split.yaml  qk-server.yaml  qk80-keepalive.service  qk80-keepalive.timer  switch.sh
docs/: GEMMA4-LOG.md  GEMMA4-PLAN.md  OPTIMIZATION-PLAN.md  server-spec.md  spec-decode-qk-plan.md  speculative-decoding.md  split-serving.md
docs/amd-opt/: NOTES.md  REPORT.md
include/: qk.h
scripts/: bisect_gate.sh  gates_fable.sh  perf_ledger.sh
server/: Cargo.toml  README.md  build.rs
server/src/: anthropic.rs  engine.rs  ffi.rs  gguf.rs  http.rs  lib.rs  main.rs  split.rs  template.rs  tokenizer.rs
server/tests/: local_driver.rs  server.rs  split_driver.rs  stage_ffi.rs  tokenizer_fixtures.rs
server/tests/common/: mod.rs
shaders/: add_rms3.comp  add_rms3_grouped.comp  add_rmsnorm.comp  add_rmsnorm_route.comp  argmax1.comp  argmax2.comp  dn_ab.comp  dn_ab_batch.comp  dn_conv.comp  dn_conv_batch.comp  dn_convn.comp  dn_gate.comp  dn_gate_batch.comp  dn_qknorm.comp  dn_step.comp  dn_step_batch.comp  dn_step_batch_cols.comp  dn_step_batch_split.comp  dn_step_gate.comp  dn_step_reg.comp  embed_q6k.comp  embed_q8_0.comp  fa_attn.comp  fa_attn_batch.comp  fa_attn_batch_coopmat.comp  fa_attn_batch_coopmat2.comp  fa_attn_srv.comp  fa_attn_srv_reduce.comp  fa_attn_srv_split.comp  fa_attn_srv_split_gqa.comp  fa_prep.comp  fa_prep_batch.comp  fa_prep_srv.comp  gemm_iq4_xs.comp  gemm_q4_0.comp  gemm_q4_0_bn32.comp  gemm_q4_0_coopmat.comp  gemm_q4_0_impl.glsl  gemm_q8_0.comp  gemm_q8_0_coopmat.comp  (+80 more)
shaders/metal/: add_rmsnorm.metal  argmax.metal  dn_ab.metal  dn_batch.metal  dn_chunk.metal  dn_conv.metal  dn_gate.metal  dn_qknorm.metal  dn_step.metal  embed_q6k.metal  embed_q8_0.metal  fa_attn.metal  fa_batch.metal  fa_gqa.metal  fa_kv.metal  fa_prep.metal  fa_srv.metal  gemm_iq4_xs.metal  gemm_q8_0.metal  gemv_f16.metal  gemv_iq3_xxs.metal  gemv_iq4_xs.metal  gemv_iq4_xs_fixed.metal  gemv_q6_k.metal  gemv_q6_k_fixed.metal  gemv_q8_0.metal  gemv_q8_0_batch.metal  gemv_q8_0_fixed.metal  head_q6.metal  iq_tables.metal  moe_common.metal  moe_down_all.metal  moe_down_grouped.metal  moe_gateup_all.metal  moe_grouped.metal  moe_logits.metal  moe_select.metal  rmsnorm.metal  vec_add.metal
src/: gemma4_engine.h  gemma4_graph.h  gemma4_loader.h  gemma4_stages.h  gguf.h  main.cpp  main_metal.mm  quant_tables.h  quants.h
stub/: qk_stub.c
tests/: README-parity.md  ids-80b-a.txt  ids-80b-long.txt  ids-spec-echo.txt  ids1.txt  ids2.txt  ids3.txt  ids4.txt  ref-80b-a.txt  ref-80b-long.txt  ref1.txt  ref2.txt  ref3.txt  ref4.txt
tests/fixtures/: tokenizer_fixtures.json
tests/gemma4/: README.md  generate_fixtures.py  generate_manifest.py  manifest.json  q4-bandwidth.jsonl  stage1-results.json  stage2-4-results.json
tests/gemma4/fixtures/: README.md  coding_prompt.json  global_context_8192.json  ordinary_chat.json  swa_position_1023.json  swa_position_1024.json  swa_position_1025.json
